@@ -6,6 +6,7 @@
 	- better file name parsing
 	- directory loading supports wildcards
 	- support for file overwrite (@)
+	- option to display hidden files in directory
 
 2007-11-02 - release 0.2.1
 	- bugfix: Don't cause repeated entries at the end of the directory
